--- a/c/html/develop/igraph-Cycles.html
+++ b/c/html/develop/igraph-Cycles.html
@@ -146,11 +146,10 @@ to list all cycles in a graph.
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_simple_cycles(
         const igraph_t *graph,
-        igraph_vector_int_list_t *vertices,
-        igraph_vector_int_list_t *edges,
+        igraph_vector_int_list_t *vertices, igraph_vector_int_list_t *edges,
         igraph_neimode_t mode,
-        igraph_int_t min_cycle_length,
-        igraph_int_t max_cycle_length);
+        igraph_int_t min_cycle_length, igraph_int_t max_cycle_length,
+        igraph_int_t max_results);
 </pre></div>
 <p>
 </p>
@@ -229,6 +228,13 @@ SIAM J. Comput. 4(1):77-84.
 <td><p>
   Limit the maximum length of cycles to search for.
   Pass a negative value to search for all cycles.
+</p></td>
+</tr>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>max_results</code></em>:</span></p></td>
+<td><p>
+  At most this many cycles will be recorded. If
+  negative, or <a class="link" href="igraph-Basic.html#IGRAPH_UNLIMITED" title='6.3. IGRAPH_UNLIMITED — Constant for "do not limit results".'><code class="function">IGRAPH_UNLIMITED</code></a>, no limit is applied.
 </p></td>
 </tr>
 </tbody>
