--- a/c/html/0.10.17/igraph-Coloring.html
+++ b/c/html/0.10.17/igraph-Coloring.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: 0.10.17
 ---
 
 {% raw %}
@@ -14,13 +14,13 @@ langversion: develop
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Flows.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Motifs.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-Coloring"></a>Chapter 22. Graph coloring</h1></div></div></div>
+<a name="igraph-Coloring"></a>Chapter 18. Graph coloring</h1></div></div></div>
 <div class="toc"><dl class="toc">
 <dt><span class="section"><a href="igraph-Coloring.html#igraph_vertex_coloring_greedy">1. <code class="function">igraph_vertex_coloring_greedy</code> —  Computes a vertex coloring using a greedy algorithm.</a></span></dt>
 <dt><span class="section"><a href="igraph-Coloring.html#igraph_coloring_greedy_t">2. <code class="function">igraph_coloring_greedy_t</code> —  Ordering heuristics for greedy graph coloring.</a></span></dt>
@@ -32,7 +32,7 @@ langversion: develop
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_vertex_coloring_greedy"></a>1. <code class="function">igraph_vertex_coloring_greedy</code> —  Computes a vertex coloring using a greedy algorithm.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.2.2"></a><p>
+<a class="indexterm" name="id-1.19.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_vertex_coloring_greedy(const igraph_t *graph, igraph_vector_int_t *colors, igraph_coloring_greedy_t heuristic);
@@ -122,7 +122,7 @@ edges connect vertices of different colors.
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.23.2.11.1"></a><p class="title"><b>Example 22.1.  File <code class="code">examples/simple/coloring.c</code></b></p>
+<a name="id-1.19.2.11.1"></a><p class="title"><b>Example 18.1.  File <code class="code">examples/simple/coloring.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
@@ -131,15 +131,12 @@ int <span class="strong"><strong>main</strong></span>(void) {
     igraph_vector_int_t colors;
     igraph_bool_t valid_coloring;
 
-    <span class="emphasis"><em>/* Initialize the library. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>();
-
     <span class="emphasis"><em>/* Setting a seed makes the result of erdos_renyi_game_gnm deterministic. */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 42);
 
     <span class="emphasis"><em>/* IGRAPH_UNDIRECTED and IGRAPH_NO_LOOPS are both equivalent to 0/FALSE, but</em></span>
 <span class="emphasis"><em>       communicate intent better in this context. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnm" title="1.1. igraph_erdos_renyi_game_gnm — Generates a random (Erdős-Rényi) graph with a fixed number of edges.">igraph_erdos_renyi_game_gnm</a></strong></span>(&amp;graph, 1000, 10000, IGRAPH_UNDIRECTED, IGRAPH_SIMPLE_SW, IGRAPH_EDGE_UNLABELED);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnm" title="2.3. igraph_erdos_renyi_game_gnm — Generates a random (Erdős-Rényi) graph with a fixed number of edges.">igraph_erdos_renyi_game_gnm</a></strong></span>(&amp;graph, 1000, 10000, IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
 
     <span class="emphasis"><em>/* As with all igraph functions, the vector in which the result is returned must</em></span>
 <span class="emphasis"><em>       be initialized in advance. */</em></span>
@@ -152,7 +149,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Destroy data structure when we are done. */</em></span>
     <span class="strong"><strong>igraph_vector_int_destroy</strong></span>(&amp;colors);
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
 
     <span class="strong"><strong>return</strong></span> 0;
 }
@@ -168,7 +165,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_coloring_greedy_t"></a>2. <code class="function">igraph_coloring_greedy_t</code> —  Ordering heuristics for greedy graph coloring.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.3.2"></a><p>
+<a class="indexterm" name="id-1.19.3.2"></a><p>
 </p>
 <pre class="programlisting">
 typedef enum {
@@ -218,7 +215,7 @@ Ordering heuristics for <a class="link" href="igraph-Coloring.html#igraph_vertex
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_is_vertex_coloring"></a>3. <code class="function">igraph_is_vertex_coloring</code> —  Checks whether a vertex coloring is valid.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.4.2"></a><p>
+<a class="indexterm" name="id-1.19.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_is_vertex_coloring(
@@ -232,7 +229,14 @@ igraph_error_t igraph_is_vertex_coloring(
 
 
 
-This function checks whether the given vertex type/color assignment is a valid
+</p>
+<div class="warning" style="margin-left: 0.5in; margin-right: 0.5in;">
+<h3 class="title">Warning</h3>
+<p>This function is experimental and its signature is not considered final yet.
+We reserve the right to change the function signature without changing the
+major version of igraph. Use it at your own risk.</p>
+</div>
+<p>This function checks whether the given vertex type/color assignment is a valid
 vertex coloring, i.e., no two adjacent vertices have the same color.
 Self-loops are ignored.
 
@@ -287,7 +291,7 @@ Time complexity: O(|E|), linear in the number of edges.
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.23.4.8.1"></a><p class="title"><b>Example 22.2.  File <code class="code">examples/simple/coloring.c</code></b></p>
+<a name="id-1.19.4.10.1"></a><p class="title"><b>Example 18.2.  File <code class="code">examples/simple/coloring.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
@@ -296,15 +300,12 @@ int <span class="strong"><strong>main</strong></span>(void) {
     igraph_vector_int_t colors;
     igraph_bool_t valid_coloring;
 
-    <span class="emphasis"><em>/* Initialize the library. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>();
-
     <span class="emphasis"><em>/* Setting a seed makes the result of erdos_renyi_game_gnm deterministic. */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 42);
 
     <span class="emphasis"><em>/* IGRAPH_UNDIRECTED and IGRAPH_NO_LOOPS are both equivalent to 0/FALSE, but</em></span>
 <span class="emphasis"><em>       communicate intent better in this context. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnm" title="1.1. igraph_erdos_renyi_game_gnm — Generates a random (Erdős-Rényi) graph with a fixed number of edges.">igraph_erdos_renyi_game_gnm</a></strong></span>(&amp;graph, 1000, 10000, IGRAPH_UNDIRECTED, IGRAPH_SIMPLE_SW, IGRAPH_EDGE_UNLABELED);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnm" title="2.3. igraph_erdos_renyi_game_gnm — Generates a random (Erdős-Rényi) graph with a fixed number of edges.">igraph_erdos_renyi_game_gnm</a></strong></span>(&amp;graph, 1000, 10000, IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
 
     <span class="emphasis"><em>/* As with all igraph functions, the vector in which the result is returned must</em></span>
 <span class="emphasis"><em>       be initialized in advance. */</em></span>
@@ -317,7 +318,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Destroy data structure when we are done. */</em></span>
     <span class="strong"><strong>igraph_vector_int_destroy</strong></span>(&amp;colors);
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
 
     <span class="strong"><strong>return</strong></span> 0;
 }
@@ -333,7 +334,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_is_bipartite_coloring"></a>4. <code class="function">igraph_is_bipartite_coloring</code> —  Checks whether a bipartite vertex coloring is valid.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.5.2"></a><p>
+<a class="indexterm" name="id-1.19.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_is_bipartite_coloring(
@@ -348,7 +349,14 @@ igraph_error_t igraph_is_bipartite_coloring(
 
 
 
-This function checks whether the given vertex type assignment is a valid
+</p>
+<div class="warning" style="margin-left: 0.5in; margin-right: 0.5in;">
+<h3 class="title">Warning</h3>
+<p>This function is experimental and its signature is not considered final yet.
+We reserve the right to change the function signature without changing the
+major version of igraph. Use it at your own risk.</p>
+</div>
+<p>This function checks whether the given vertex type assignment is a valid
 bipartite coloring, i.e., no two adjacent vertices have the same type.
 Additionally, for directed graphs, it determines the mode of edge directions.
 Self-loops are ignored.
@@ -432,7 +440,7 @@ i.e. 2-colorable, and find such a coloring.
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_is_edge_coloring"></a>5. <code class="function">igraph_is_edge_coloring</code> —  Checks whether an edge coloring is valid.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.6.2"></a><p>
+<a class="indexterm" name="id-1.19.6.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_is_edge_coloring(
@@ -446,7 +454,14 @@ igraph_error_t igraph_is_edge_coloring(
 
 
 
-This function checks whether the given edge color assignment is a valid
+</p>
+<div class="warning" style="margin-left: 0.5in; margin-right: 0.5in;">
+<h3 class="title">Warning</h3>
+<p>This function is experimental and its signature is not considered final yet.
+We reserve the right to change the function signature without changing the
+major version of igraph. Use it at your own risk.</p>
+</div>
+<p>This function checks whether the given edge color assignment is a valid
 edge coloring, i.e., no two adjacent edges have the same color.
 
 Note that this function does not consider self-edges (loops) as being
@@ -506,7 +521,7 @@ Time complexity: O(|V|*d*log(d)), where d is the maximum degree.
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="igraph_is_perfect"></a>6. <code class="function">igraph_is_perfect</code> —  Checks if the graph is perfect.</h2></div></div></div>
-<a class="indexterm" name="id-1.23.7.2"></a><p>
+<a class="indexterm" name="id-1.19.7.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_is_perfect(const igraph_t *graph, igraph_bool_t *perfect);
@@ -581,7 +596,7 @@ Time complexity: worst case exponenital, often faster in practice.
 </div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-Isomorphism.html"><b>← Chapter 21. Graph isomorphism</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Flows.html"><b>Chapter 23. Maximum flows, minimum cuts and related measures →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-Isomorphism.html"><b>← Chapter 17. Graph isomorphism</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Motifs.html"><b>Chapter 19. Graph motifs, dyad census and triad census →</b></a></td>
 </tr></table>
 {% endraw %}
