--- a/c/html/0.10.17/igraph-Random.html
+++ b/c/html/0.10.17/igraph-Random.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: 0.10.17
 ---
 
 {% raw %}
@@ -14,7 +14,7 @@ langversion: develop
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Iterators.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Generators.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
@@ -102,7 +102,7 @@ igraph_rng_t *igraph_rng_default(void);
 <a class="indexterm" name="id-1.9.3.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_rng_t *igraph_rng_set_default(igraph_rng_t *rng);
+void igraph_rng_set_default(igraph_rng_t *rng);
 </pre></div>
 <p>
 </p>
@@ -110,11 +110,15 @@ igraph_rng_t *igraph_rng_set_default(igraph_rng_t *rng);
 
 
 
-This function updates the default RNG used by igraph to be the one
-pointed to by <em class="parameter"><code>rng</code></em>, and returns a pointer to the previous default
-RNG. Future calls to <a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator."><code class="function">igraph_rng_default()</code></a> will return the same
-pointer as <em class="parameter"><code>rng</code></em>. The RNG pointed to by <em class="parameter"><code>rng</code></em> must not be destroyed
-for as long as it is used as the default.
+This function <span class="emphasis"><em>copies</em></span> the internal structure of the given <span class="type">igraph_rng_t</span>
+object to igraph's internal default RNG structure. The structure itself
+contains two pointers only, one to the "methods" of the RNG and one to the
+memory buffer holding the internal state of the RNG. This means that if you
+keep on generating random numbers from the RNG after setting it as the
+default, it will affect the state of the default RNG as well because the two
+share the same state pointer. However, do <span class="emphasis"><em>not</em></span> expect
+<a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator."><code class="function">igraph_rng_default()</code></a> to return the same pointer as the one you passed
+in here - the state is shared, but the entire structure is not.
 
 </p>
 <p><b>Arguments: </b>
@@ -130,26 +134,11 @@ for as long as it is used as the default.
   The random number generator to use as default from now
    on. Calling <a class="link" href="igraph-Random.html#igraph_rng_destroy" title="3.2. igraph_rng_destroy — Deallocates memory associated with a random number generator."><code class="function">igraph_rng_destroy()</code></a> on it, while it is still
    being used as the default will result in crashes and/or
-   unpredictable results.
-</p></td>
+   unpredictable results.</p></td>
 </tr></tbody>
 </table></div>
 <p>
-</p>
-<p><b>Returns: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  Pointer the previous default RNG.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
+
 
 Time complexity: O(1).
  
@@ -329,7 +318,7 @@ RNG.
 <a class="indexterm" name="id-1.9.4.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_int_t igraph_rng_bits(const igraph_rng_t* rng);
+igraph_integer_t igraph_rng_bits(const igraph_rng_t* rng);
 </pre></div>
 <p>
 </p>
@@ -556,8 +545,8 @@ is needed at a time. It is not efficient for generating multiple bits.
 <a class="indexterm" name="id-1.9.5.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_int_t igraph_rng_get_integer(
-    igraph_rng_t *rng, igraph_int_t l, igraph_int_t h
+igraph_integer_t igraph_rng_get_integer(
+    igraph_rng_t *rng, igraph_integer_t l, igraph_integer_t h
 );
 </pre></div>
 <p>
@@ -962,7 +951,7 @@ Time complexity: depends on the RNG.
 <a class="indexterm" name="id-1.9.5.9.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_real_t igraph_rng_get_binom(igraph_rng_t *rng, igraph_int_t n, igraph_real_t p);
+igraph_real_t igraph_rng_get_binom(igraph_rng_t *rng, igraph_integer_t n, igraph_real_t p);
 </pre></div>
 <p>
 </p>
@@ -1437,27 +1426,26 @@ use. If you want to replace that, then please use <a class="link" href="igraph-R
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
 int <span class="strong"><strong>main</strong></span>(void) {
+
     igraph_t g1, g2;
     igraph_bool_t iso;
 
-    <span class="emphasis"><em>/* Initialize the library. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>();
-
     <span class="emphasis"><em>/* Seed the default random number generator and create a random graph. */</em></span>
+
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 1122);
 
-    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnp" title="1.2. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g1, 100, 3.0 / 100, IGRAPH_UNDIRECTED, IGRAPH_SIMPLE_SW, IGRAPH_EDGE_UNLABELED);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnp" title="2.4. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g1, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
 
     <span class="emphasis"><em>/* Seed the generator with the same seed again,</em></span>
 <span class="emphasis"><em>     * and create a graph with the same method. */</em></span>
 
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 1122);
 
-    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnp" title="1.2. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g2, 100, 3.0 / 100, IGRAPH_UNDIRECTED, IGRAPH_SIMPLE_SW, IGRAPH_EDGE_UNLABELED);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnp" title="2.4. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g2, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
 
     <span class="emphasis"><em>/* The two graphs will be identical. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_is_same_graph" title="6.6. igraph_is_same_graph — Are two graphs identical as labelled graphs?">igraph_is_same_graph</a></strong></span>(&amp;g1, &amp;g2, &amp;iso);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_is_same_graph" title="5.5. igraph_is_same_graph — Are two graphs identical as labelled graphs?">igraph_is_same_graph</a></strong></span>(&amp;g1, &amp;g2, &amp;iso);
 
     <span class="strong"><strong>if</strong></span> (!iso) {
         <span class="strong"><strong>return</strong></span> 1;
@@ -1465,8 +1453,8 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Destroy no longer needed data structures. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g2);
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g1);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g2);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g1);
 
     <span class="strong"><strong>return</strong></span> 0;
 }
@@ -1481,6 +1469,6 @@ int <span class="strong"><strong>main</strong></span>(void) {
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
 <td align="left"><a accesskey="p" href="igraph-Data-structures.html"><b>← Chapter 7. Data structure library: vector, matrix, other data types</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Iterators.html"><b>Chapter 9. Vertex and edge selectors and sequences, iterators →</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Generators.html"><b>Chapter 9. Graph generators →</b></a></td>
 </tr></table>
 {% endraw %}
