--- a/c/html/0.10.17/index.html
+++ b/c/html/0.10.17/index.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: 0.10.17
 ---
 
 {% raw %}
@@ -63,9 +63,9 @@ langversion: develop
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">1.0.0-rc1-107-g0454d55f5</p></div>
+<div><p class="releaseinfo">0.10.17</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-rc1-107-g0454d55f5.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.17.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
@@ -89,34 +89,32 @@ langversion: develop
 <dt><span class="chapter"><a href="igraph-Memory.html">6. Memory (de)allocation</a></span></dt>
 <dt><span class="chapter"><a href="igraph-Data-structures.html">7. Data structure library: vector, matrix, other data types</a></span></dt>
 <dt><span class="chapter"><a href="igraph-Random.html">8. Random numbers</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Iterators.html">9. Vertex and edge selectors and sequences, iterators</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Attributes.html">10. Graph, vertex and edge attributes</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Generators.html">11. Deterministic graph generators</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Games.html">12. Stochastic graph generators ("games")</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Bipartite.html">13. Bipartite, i.e. two-mode graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Spatial.html">14. Spatial graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Operators.html">15. Graph operators</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Visitors.html">16. Graph visitors</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Structural.html">17. Structural properties of graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Cycles.html">18. Graph cycles</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Cliques.html">19. Cliques and independent vertex sets</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Motifs.html">20. Graph motifs, dyad census and triad census</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Isomorphism.html">21. Graph isomorphism</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Coloring.html">22. Graph coloring</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Flows.html">23. Maximum flows, minimum cuts and related measures</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Separators.html">24. Vertex separators</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Community.html">25. Detecting community structure</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Graphlets.html">26. Graphlets</a></span></dt>
-<dt><span class="chapter"><a href="igraph-HRG.html">27. Hierarchical random graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Embedding.html">28. Embedding of graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Layout.html">29. Generating layouts for graph drawing</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Processes.html">30. Processes on graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Foreign.html">31. Reading and writing graphs from and to files</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Linalg.html">32. Using BLAS, LAPACK and ARPACK for igraph matrices and graphs</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Nongraph.html">33. Non-graph related functions </a></span></dt>
-<dt><span class="chapter"><a href="igraph-Advanced.html">34. Advanced igraph programming</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Glossary.html">35. Glossary</a></span></dt>
-<dt><span class="chapter"><a href="igraph-Licenses.html">36. Licenses for igraph and this manual</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Generators.html">9. Graph generators</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Spatial-Games.html">10. Games on graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Iterators.html">11. Vertex and edge selectors and sequences, iterators</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Attributes.html">12. Graph, vertex and edge attributes</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Structural.html">13. Structural properties of graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Cycles.html">14. Graph cycles</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Visitors.html">15. Graph visitors</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Cliques.html">16. Cliques and independent vertex sets</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Isomorphism.html">17. Graph isomorphism</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Coloring.html">18. Graph coloring</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Motifs.html">19. Graph motifs, dyad census and triad census</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Layout.html">20. Generating layouts for graph drawing</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Foreign.html">21. Reading and writing graphs from and to files</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Flows.html">22. Maximum flows, minimum cuts and related measures</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Separators.html">23. Vertex separators</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Community.html">24. Detecting community structure</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Graphlets.html">25. Graphlets</a></span></dt>
+<dt><span class="chapter"><a href="igraph-HRG.html">26. Hierarchical random graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Embedding.html">27. Embedding of graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Operators.html">28. Graph operators</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Arpack.html">29. Using BLAS, LAPACK and ARPACK for igraph matrices and graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Bipartite.html">30. Bipartite, i.e. two-mode graphs</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Advanced.html">31. Advanced igraph programming</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Nongraph.html">32. Non-graph related functions </a></span></dt>
+<dt><span class="chapter"><a href="igraph-Glossary.html">33. Glossary</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Licenses.html">34. Licenses for igraph and this manual</a></span></dt>
 <dt><span class="index"><a href="ix01.html">Index</a></span></dt>
 </dl></div>
 </div>
