--- a/c/html/0.10.17/ix01.html
+++ b/c/html/0.10.17/ix01.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: master
+langversion: 0.10.17
 ---
 
 {% raw %}
