--- a/c/html/develop/igraph-Generators.html
+++ b/c/html/develop/igraph-Generators.html
@@ -773,17 +773,18 @@ int <span class="strong"><strong>main</strong></span>(void) {
                                  { 2.0,   0,   0, 1.0 },
                                  {   0,   0, 1.5,   0 },
                                  {   0, 1.0,   0,   0 } };
-    igraph_matrix_t mat;
+
+    <span class="emphasis"><em>/* C arrays use row-major storage, while igraph's matrix uses column-major.</em></span>
+<span class="emphasis"><em>     * The matrix 'mat' will be the transpose of 'data'. */</em></span>
+    <span class="strong"><strong>const</strong></span> igraph_matrix_t mat =
+        <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_matrix_view" title="3.5.1. igraph_matrix_view — Creates a matrix view into an existing array.">igraph_matrix_view</a></strong></span>(*data, <span class="strong"><strong>sizeof</strong></span>(data[0]) / <span class="strong"><strong>sizeof</strong></span>(data[0][0]),
+                                  <span class="strong"><strong>sizeof</strong></span>(data) / <span class="strong"><strong>sizeof</strong></span>(data[0]));
     <a class="link" href="igraph-Data-structures.html#igraph_vector_t" title="2.1.  About igraph_vector_t objects">igraph_vector_t</a> weights;
     igraph_vector_int_t edges;
     igraph_int_t n;
 
     <span class="emphasis"><em>/* Initialize the library. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>();
-
-    <span class="emphasis"><em>/* C arrays use row-major storage, while igraph's matrix uses column-major.</em></span>
-<span class="emphasis"><em>     * The matrix 'mat' will be the transpose of 'data'. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_matrix_view" title="3.5.1. igraph_matrix_view — Creates a matrix view into an existing array.">igraph_matrix_view</a></strong></span>(&amp;mat, *data, <span class="strong"><strong>sizeof</strong></span>(data[0]) / <span class="strong"><strong>sizeof</strong></span>(data[0][0]), <span class="strong"><strong>sizeof</strong></span>(data) / <span class="strong"><strong>sizeof</strong></span>(data[0]));
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>(); 
 
     <span class="emphasis"><em>/* Initialize vector into which weights will be written. */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_vector_init" title="2.2.1. igraph_vector_init — Initializes a vector object (constructor).">igraph_vector_init</a></strong></span>(&amp;weights, 0);
@@ -3473,6 +3474,12 @@ for constructing trees with a given degree sequence.
 
 </p>
 <p>
+For a undirected simple graph, the time complexity is O(V + alpha(V) * E).
+For an undirected multi graph, the time complexity is O(V * E + V log V).
+For a directed graph, the time complexity is O(E + V^2 log V).
+
+</p>
+<p>
 References:
 
 </p>
@@ -3727,7 +3734,7 @@ Connectedness matters: construction and exact random sampling of connected netwo
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.12.7.3.18.1"></a><p class="title"><b>Example 11.10.  File <code class="code">examples/simple/igraph_realize_degree_sequence.c</code></b></p>
+<a name="id-1.12.7.3.19.1"></a><p class="title"><b>Example 11.10.  File <code class="code">examples/simple/igraph_realize_degree_sequence.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 <span class="strong"><strong>#include</strong></span> &lt;stdio.h&gt;
